[package]
name = "nicator"
version = "0.1.0"
authors = ["Erik Schubert <nuckal777+nicator@gmail.com>"]
description = "A lightweight encrypting git credential helper"
readme = "README.md"
license = "Unlicense"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.2"
bincode = "1.3"
byteorder = "1.4"
chacha20poly1305 = "0.8"
clap = "2.33"
nix = "0.20"
rand_core = { version = "0.6", features = ["std"] }
rpassword = "5.0"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
