[package]
name = "nicator"
version = "0.2.1"
authors = ["Erik Schubert <nuckal777+nicator@gmail.com>"]
description = "A lightweight encrypting git credential helper"
readme = "README.md"
license = "Unlicense"
edition = "2018"
repository = "https://github.com/Nuckal777/nicator"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.3"
bincode = "1.3"
byteorder = "1.4"
chacha20poly1305 = "0.9"
clap = "2.33"
nix = "0.23"
percent-encoding = "2.1"
rand_core = { version = "0.6", features = ["std"] }
rpassword = "5.0"
secstr = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
signal-hook = "0.3"
thiserror = "1.0"
url = "2.2"

[profile.release]
strip = "debuginfo"
