[package]
name = "nicator"
version = "0.3.1"
authors = ["Erik Schubert <nuckal777+nicator@gmail.com>"]
description = "A lightweight encrypting git credential helper"
readme = "README.md"
license = "Unlicense"
edition = "2018"
repository = "https://github.com/Nuckal777/nicator"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5"
bincode = "1.3"
byteorder = "1.4"
chacha20poly1305 = "0.10"
clap = { version ="4.3", features = ["cargo"] }
nix = "0.26"
percent-encoding = "2.3"
rand_core = { version = "0.6", features = ["std"] }
rpassword = "7.0"
secstr = { version = "0.5", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
signal-hook = "0.3"
thiserror = "1.0"
url = "2.4"

[profile.release]
strip="debuginfo"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nicator", dest = "/usr/bin/nicator", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/nicator/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/nicator/README.md", doc = true, mode = "0644" }
]
